ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  rules:
  - http:
      paths:
      - path: /weather
        pathType: Prefix
        backend:
          service:
            name: weather-service
            port:
              number: 80
      - path: /news
        pathType: ImplementationSpecific
        backend:
          service:
            name: news-service
            port:
              number: 80
      - path: /stats
        pathType: ImplementationSpecific
        backend:
          service:
            name: stats-service
            port:
              number: 80
